Fix settings btn visibility

--- a/anvio/data/interactive/css/pangraph.css
+++ b/anvio/data/interactive/css/pangraph.css
@@ -136,3 +136,7 @@ html *
   .bin-icon-size{
     font-size: 14px;
   }
+
+  #toggle-panel-left{
+    z-index: 1;
+  }
